chore: change cxx standard

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,10 @@ if(CMAKE_CXX_COMPILER_FRONTEND_VARIANT STREQUAL "MSVC")
 else()
     target_compile_options(sourcesharp PRIVATE -fcxx-exceptions)
 endif()
+set_target_properties(sourcesharp PROPERTIES CXX_EXTENSIONS OFF)
+target_compile_features(sourcesharp PRIVATE c_std_99)
+set_target_properties(sourcesharp PROPERTIES CXX_EXTENSIONS OFF)
+target_compile_features(sourcesharp PRIVATE cxx_std_20)
 if(MSVC)
     set_property(TARGET sourcesharp PROPERTY
         MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
